Improve tui paging and counts
